--- a/about.html
+++ b/about.html
@@ -110,6 +110,41 @@
                                         <p>I've been special>ising in web design for the past three years.<br>
                                             Also I have experience in branding, invitations, and advertisements.</p>
                                 </div>
+
+
+                                <div class="container"> 
+  <h2 style="text-align: center; margin-bottom: 40px;">MY CERTIFICATIONS</h2>
+  
+  <div class="row" style="align-items: center;">
+
+    <!-- Certificate 1 -->
+    <div class="col-xs-12 col-sm-6 col-md-4" style="margin-bottom: 30px;">
+     <a href="UIUX-1/certificate1.jpg" target="_blank"></a>
+        <img src="img/UIUX-1.png" alt="Certificate 1" 
+             style="width: 100%; border-radius: 10px; border: 2px solid #ccc; box-shadow: 0 4px 8px rgba(0,0,0,0.1); transition: transform 0.3s;">
+      </a>
+    </div>
+
+    <!-- Certificate 2 -->
+    <div class="col-xs-12 col-sm-6 col-md-4" style="margin-bottom: 30px;">
+              <img src="img/Frontend Dev-1.png" alt="Certificate 1" 
+
+             style="width: 100%; border-radius: 10px; border: 2px solid #ccc; box-shadow: 0 4px 8px rgba(0,0,0,0.1); transition: transform 0.3s;">
+      </a>
+    </div>
+
+    <!-- Add more certificates here -->
+    <!--
+    <div class="col-xs-12 col-sm-6 col-md-4" style="margin-bottom: 30px;">
+      <a href="certificates/certificate3.jpg" target="_blank">
+        <img src="certificates/certificate3.jpg" alt="Certificate 3" 
+             style="width: 100%; border-radius: 10px; border: 2px solid #ccc; box-shadow: 0 4px 8px rgba(0,0,0,0.1); transition: transform 0.3s;">
+      </a>
+    </div>
+    -->
+
+  </div>
+</div>
                            
 <!-- 
                                     <div class="author-desc">
