--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
                                     </div>
                                 </div>
                                 <!-- /.contact-block -->
-                                <div class="contact-block">
+                                <!-- <div class="contact-block">
                                     <div class="media">
                                         <div class="media-left">
                                             <i class="tf-mobile"></i>
@@ -104,7 +104,7 @@
                                             <p><a href="skype:my_name">my_name</a></p>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- /.contact-block -->
 
                                 <ul class="contact-social">
@@ -133,11 +133,11 @@
                                     <span class="bar-primary"></span>
                                 </div>
 
-                                <form id="contact-form" class="row contact-form no-gutter" action="#" method="post">
+                                <form id="contact-form" class="row contact-form no-gutter" action="https://formspree.io/f/mrblkqeg" method="post">
                                     <div class="col-xs-12 col-sm-6">
                                         <div class="input-field name">
                                             <span class="input-icon" id="name" ><i class="tf-profile-male"></i></span>
-                                            <input type="text" class="form-control"  placeholder="Enter your name">
+                                            <input type="text" class="form-control" name="name" placeholder="Enter your name">
                                         </div>
                                     </div> <!-- ./col- -->
                                     <div class="col-xs-12 col-sm-6">
