--- a/works.html
+++ b/works.html
@@ -98,48 +98,52 @@
                             <div class="col-xs-12 col-sm-6 col-md-4 Wordpress">
                                 <a href="https://feeltoprint.com/" target="_blank">
                                 <figure class="works-item">
-                                    <img src="img/feel to print.png" alt="">
-                                    <div class="overlay"></div>
+                                    <img src="img/feel to print.png" alt="feel to print">
+                            <div class="overlay"></div>
                                     <figcaption class="works-inner">
                                         <h4>Feel To Print</h4>
                                         <p>Wordpress</p>
                                     </figcaption>
                                 </figure>
+                                </a>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-4 Wordpress">
                                  <a href="https://diwakartours.com/" target="_blank"></a>
                                 <figure class="works-item">
-                                    <img src="img/Diwakarrr.jpg" alt="">
-                                    <div class="overlay"></div>
+                                    <img src="img/Diwakarrr.jpg" alt="Diwakarrr">
+                            <div class="overlay"></div>
                                     <figcaption class="works-inner">
                                         <h4>Diwakar Tours</h4>
                                         <p>Wordpress</p>
                                     </figcaption>
                                 </figure>
+                            </a>
                             </div>
 
                              <div class="col-xs-12 col-sm-6 col-md-4 Wordpress">
                                  <a href="https://aditechsoftwares.com/" target="_blank"></a>
                                 <figure class="works-item">
-                                    <img src="img/Aditech.jpg" alt="">
+                                    <img src="img/Aditech.jpg" alt="Aditech">
                                     <div class="overlay"></div>
                                     <figcaption class="works-inner">
                                         <h4>Aditech Softwares</h4>
                                         <p>Wordpress</p>
                                     </figcaption>
                                 </figure>
+                            </a>
                             </div>
 
                             <div class="col-xs-12 col-sm-6 col-md-4 Wordpress">
                                  <a href="https://funkycrabs.com/" target="_blank"></a>
                                 <figure class="works-item">
-                                    <img src="img/Funkycrab.png" alt="">
+                                    <img src="img/Funkycrab.png" alt="Funkycrab">
                                     <div class="overlay"></div>
                                     <figcaption class="works-inner">
                                         <h4>Funky Crab</h4>
                                         <p>Wordpress</p>
                                     </figcaption>
                                 </figure>
+                            </a>
                             </div>
                             <!-- <div class="col-xs-12 col-sm-6 col-md-4 Wordpress"> -->
                                 <a href="https://www.gpklogistech.com/" target="_blank"></a>
@@ -156,13 +160,14 @@
                             <div class="col-xs-12 col-sm-6 col-md-4 Wordpress">
                                 <a href="http://rbsintellect.com/" target="_blank"></a>
                                 <figure class="works-item">
-                                    <img src="img/RBS.png" alt="">
+                                    <img src="img/RBS.png" alt="RBS">
                                     <div class="overlay"></div>
                                     <figcaption class="works-inner">
                                         <h4>RBS Intellect</h4>
                                         <p>Wordpress</p>
                                     </figcaption>
                                 </figure>
+                                </a>
                             </div>
 
                         
