--- a/works.html
+++ b/works.html
@@ -121,7 +121,7 @@
                             </div>
 
                              <div class="col-xs-12 col-sm-6 col-md-4 Wordpress">
-                                 <a href="https://aditechsoftwares.com/" target="_blank"></a>
+                                 <a href="https://aditechsoftwares.com/" target="_blank">
                                 <figure class="works-item">
                                     <img src="img/Aditech.jpg" alt="Aditech">
                                     <div class="overlay"></div>
@@ -134,7 +134,7 @@
                             </div>
 
                             <div class="col-xs-12 col-sm-6 col-md-4 Wordpress">
-                                 <a href="https://funkycrabs.com/" target="_blank"></a>
+                                 <a href="https://funkycrabs.com/" target="_blank">
                                 <figure class="works-item">
                                     <img src="img/Funkycrab.png" alt="Funkycrab">
                                     <div class="overlay"></div>
@@ -146,7 +146,7 @@
                             </a>
                             </div>
                             <!-- <div class="col-xs-12 col-sm-6 col-md-4 Wordpress"> -->
-                                <a href="https://www.gpklogistech.com/" target="_blank"></a>
+                                <a href="https://www.gpklogistech.com/" target="_blank">
                                 <figure class="works-item">
                                     <img src="img/" alt="">
                                     <div class="overlay"></div>
@@ -155,10 +155,11 @@
                                         <p>Wordpress</p>
                                     </figcaption>
                                 </figure>
+                                </a>
                             <!-- </div> -->
 
                             <div class="col-xs-12 col-sm-6 col-md-4 Wordpress">
-                                <a href="http://rbsintellect.com/" target="_blank"></a>
+                                <a href="http://rbsintellect.com/" target="_blank">
                                 <figure class="works-item">
                                     <img src="img/RBS.png" alt="RBS">
                                     <div class="overlay"></div>
@@ -172,7 +173,7 @@
 
                         
                             <!-- <div class="col-xs-12 col-sm-6 col-md-4 Wordpress"> -->
-                                 <a href="http://sunraj-solitaire.com/" target="_blank"></a>
+                                 <a href="http://sunraj-solitaire.com/" target="_blank">
                                 <figure class="works-item">
                                     <img src="img/SunrajSolitaire.png" alt="">
                                     <div class="overlay"></div>
@@ -181,6 +182,8 @@
                                         <p>Wordpress</p>
                                     </figcaption>
                                 </figure>
+                                 </a>
+
                             <!-- </div> -->
 
                         
